syntax = "proto3";

package iot;

// Real-world IoT and sensor data structures

enum SensorType {
  TEMPERATURE = 0;
  HUMIDITY = 1;
  PRESSURE = 2;
  ACCELEROMETER = 3;
  GYROSCOPE = 4;
  MAGNETOMETER = 5;
  GPS = 6;
  LIGHT = 7;
  PROXIMITY = 8;
  SOUND = 9;
}

enum SensorStatus {
  OFFLINE = 0;
  ONLINE = 1;
  ERROR = 2;
  CALIBRATING = 3;
}

message SensorReading {
  option (proto2ffi.pool_size) = 100000;

  uint64 sensor_id = 1;
  SensorType type = 2;
  float value = 3;
  uint64 timestamp_micros = 4;
  uint32 sequence_number = 5;
  uint8 quality = 6;  // 0-100
}

message Vector3Reading {
  option (proto2ffi.simd) = true;

  float x = 1;
  float y = 2;
  float z = 3;
  uint64 timestamp = 4;
}

message AccelerometerData {
  option (proto2ffi.pool_size) = 50000;

  Vector3Reading acceleration = 1;
  float magnitude = 2;
  uint64 sensor_id = 3;
  bool shock_detected = 4;
}

message GyroscopeData {
  option (proto2ffi.pool_size) = 50000;

  Vector3Reading angular_velocity = 1;
  float rotation_magnitude = 2;
  uint64 sensor_id = 3;
}

message GPSData {
  double latitude = 1;
  double longitude = 2;
  double altitude = 3;
  float speed = 4;
  float heading = 5;
  float hdop = 6;  // Horizontal dilution of precision
  uint8 satellites = 7;
  uint64 timestamp = 8;
}

message EnvironmentalData {
  float temperature = 1;  // Celsius
  float humidity = 2;     // Percentage
  float pressure = 3;     // hPa
  float air_quality = 4;  // Index
  uint64 timestamp = 5;
}

message DeviceInfo {
  uint64 device_id = 1;
  string device_name = 2 [(proto2ffi.max_length) = 64];
  string firmware_version = 3 [(proto2ffi.max_length) = 32];
  uint32 battery_level = 4;  // Percentage
  SensorStatus status = 5;
  uint64 uptime_seconds = 6;
  uint32 error_count = 7;
}

message SensorCalibration {
  uint64 sensor_id = 1;
  SensorType type = 2;
  float offset = 3;
  float scale = 4;
  float bias_x = 5;
  float bias_y = 6;
  float bias_z = 7;
  uint64 calibrated_at = 8;
  bool is_valid = 9;
}

message DataBuffer {
  option (proto2ffi.simd) = true;

  repeated float values = 1 [(proto2ffi.max_count) = 1024];
  uint32 count = 2;
  uint64 start_timestamp = 3;
  uint64 end_timestamp = 4;
  uint32 sample_rate_hz = 5;
}

message SensorStatistics {
  uint64 sensor_id = 1;
  uint64 total_readings = 2;
  uint64 valid_readings = 3;
  uint64 error_readings = 4;
  float min_value = 5;
  float max_value = 6;
  float avg_value = 7;
  float std_deviation = 8;
  uint64 last_reading_time = 9;
}

message SensorArray {
  repeated SensorReading readings = 1 [(proto2ffi.max_count) = 256];
  uint32 count = 2;
  uint64 device_id = 3;
  uint64 batch_timestamp = 4;
}

message Alert {
  enum AlertLevel {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
    CRITICAL = 3;
  }

  uint64 alert_id = 1;
  uint64 sensor_id = 2;
  AlertLevel level = 3;
  string message = 4 [(proto2ffi.max_length) = 256];
  float threshold_value = 5;
  float actual_value = 6;
  uint64 timestamp = 7;
  bool acknowledged = 8;
}
